edited link of linkedin & github in footer

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
                     <tr>
                         <td width="33.33%" valign="top">
-                            <a href="https://www.linkedin.com" target="_blank">
+                            <a href="https://www.linkedin.com/in/fatma-mustafa-muhammed" target="_blank">
                                 <font face="arial" color="#000000" size="5">
                                     <span class="fa fa-linkedin-square" aria-hidden="true"></span>
                                     Linkedin
@@ -397,7 +397,7 @@
                             </a>
                         </td>
                         <td width="33.33%" valign="top">
-                            <a href="https://www.github.com" target="_blank">
+                            <a href="https://github.com/fatmamustafamuhammed" target="_blank">
                                 <font face="arial" color="#000000" size="5">
                                     <span class="fa fa-github-square" aria-hidden="true"></span>
                                     Github
